ethics and naming tweaks

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -7,6 +7,12 @@ import './ethics.scss';
 
 
 <Row className="opener">
+<Column className={'show-on-small'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
+
+![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
+
+</Column>
+
 <Column colSm={4} colMd={7} colLg={7}>
 
 ### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
@@ -17,7 +23,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
+<Column className={'hide-on-small'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
 
 ![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
