--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -1,25 +1,20 @@
 ---
-title: "Ethics"
+title: "AI Design Ethics"
 ---
 
 import { AnchorLink, AnchorLinks, Aside, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
 
-  This document represents the beginning of a conversation defining Everyday Ethics for AI. Ethics must be embedded into the design and development process from the very beginning of AI creation.
+  Ethical decision-making isn’t just another form of technical problem solving. As designers and developers of AI systems, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
 
 </PageDescription>
 
 <Row className="resource-card-group">
 <Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
-  href={'ibm.biz/everydayethics'}
-  subTitle={'Everyday Ethics for AI'} />
-</Column>
-<Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
-<ResourceCard
   href={'https://www.research.ibm.com/artificial-intelligence/trusted-ai/'}
-  subTitle={'Trusted AI'} />
+  subTitle={'IBM Research Trusted AI'} />
 </Column>
 <Column noGutterSm={true} colSm={4} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
@@ -33,20 +28,12 @@ import { AnchorLink, AnchorLinks, Aside, Column, PageDescription, ResourceCard, 
 </Column>
 </Row>
 
-## Ethical decision-making is not just another form of technical problem solving.
+## Overview
 
 <Row>
 <Column colMd={7} colLg={7}>
 
-This is meant to stimulate ideas and provoke thought. The idea here is to start simple and iterate. Rather than strive for perfection first, we’re releasing this to allow all who read and use this to comment, critique and participate in all future iterations. So please experiment, play, use, and break what you find here and send us your feedback. Designers and developers of AI systems are encouraged to be aware of these concepts and seize opportunities to intentionally put these ideas into practice.
-
-As AI designers and developers, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
-
-Artificial intelligence technology is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
-
 We’ll add content and resources to this section of the site over time as we incorporate them into our design practice. Our goal here is transparency around what works for us and our users, and why.
-
-We’ve built our perspective through conversations with our subject matter experts, our teams, our stakeholders, and by referencing publicly available material. The resources below offer additional context on our foundational knowledge and insight into how these directions will continue to evolve in the future.
 
 </Column>
 </Row>
@@ -55,15 +42,23 @@ We’ve built our perspective through conversations with our subject matter expe
 >
 > - [Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/)
 
+<Row>
+<Column colMd={7} colLg={7}>
+
+We’ve built our perspective through conversations with our subject matter experts, our teams, our stakeholders, and by referencing publicly available material. The resources below offer additional context on our foundational knowledge and insight into how these directions will continue to evolve in the future.
+
+</Column>
+</Row>
+
 <FeatureCard
   className={'ethics-cta'}
-  subTitle="Version 1.0"
+  subTitle="ibm.biz"
   title="Everyday Ethics for AI"
   actionIcon="launch"
-  href="ibm.biz/everydayethics"
+  href="http://ibm.biz/everydayethics"
   color="dark"
   >
 
-![demo image](../../images/ethics/Image_2.png)
+![Everyday ethics for AI download link](../../images/ethics/Image_2.png)
 
 </FeatureCard>
