--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -25,6 +25,8 @@ import { AnchorLink, AnchorLinks, Caption, Column, PageDescription, Row } from "
 
 ## Introduction
 
+Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, *voilá*, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
+
 When looking for ways to apply this cutting-edge, revolutionary technology, AI can not only dazzle, but can blind us as well. The more buzz and hype, the greater the pressure becomes to rush to create something using whatever new capabilities are presented to us. The benefit of moments like this is the opportunity to discover, experiment, and learn.
 
 We must focus our design talents upon a new type relationship with machines - machines that can draw from vast stores of human knowledge, hold a conversation, and increase human understanding. What should these relationships look like? Designing for AI requires new considerations and new ways of thinking.
@@ -213,6 +215,14 @@ So what do we need to consider when one person in a relationship is replaced by 
 Artificial intelligences are probabilistic systems. This means that they are taught instead of being programmed. Since they are being taught, they must have context to be able to utilize their learnings. An AI needs this context to understand its place and provide value.
 
 <Row>
+<Column colLg={6}>
+
+![The Relationship Age](../../images/fundamentals/Image_5.png)
+
+</Column>
+</Row>
+
+<Row>
 <Column colLg={4}>
 
 #### Human
@@ -236,13 +246,6 @@ The external factors that will both inform and educate the system
 </Column>
 </Row>
 
-<Row>
-<Column colLg={6}>
-
-![The Relationship Age](../../images/fundamentals/Image_5.png)
-
-</Column>
-</Row>
 
 ### AI/Human Context Model
 
@@ -260,6 +263,77 @@ The external factors that will both inform and educate the system
 ![The AI/Human Context Model image](../../images/fundamentals/Image_6.png)
 
 </div>
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
+#### Intent
+The goals, wants, needs, and values of users and businesses. Intent provides your solution’s purpose.
+
+</Column>
+
+<Column colLg={4}>
+
+#### Data and policy
+All of the significant raw data a machine can collect from the user and the world and the policies that protect it.
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
+#### Understanding
+The process of putting incoming structured and unstructured data in context of your domain. Also known as machine learning.
+
+</Column>
+
+<Column colLg={4}>
+
+#### Reasoning
+The system’s application of logic to decide on the best course(s) of action.
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
+#### Knowledge
+This is what the system knows. This is all past data, insights, and learned attributes measured up against the overall intent of the system.
+
+</Column>
+<Column colLg={4}>
+
+#### Expression
+How the system delivers its response based on the content of the message and its understanding of the user.
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
+#### User reaction
+This is the user’s genuine reaction to the system’s expression. Based on the quality of the system’s response.
+
+</Column>
+<Column colLg={4}>
+
+#### Learning
+The user is continually teaching the system to improve through direct and indirect responses.
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
+#### Outcome
+The consequences of an actualized system used in the real world to solve real users’ real problems.
 
 </Column>
 </Row>
