--- a/src/pages/ethics/everyday-ethics.mdx
+++ b/src/pages/ethics/everyday-ethics.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ethics"
+title: "Everyday Ethics for AI"
 ---
 
 import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
@@ -7,26 +7,26 @@ import './ethics.scss';
 
 <PageDescription>
 
-  This document represents the beginning of a conversation defining Everyday Ethics for AI. Ethics must be embedded into the design and development process from the very beginning of AI creation.
+  Ethical decision-making isn’t just another form of technical problem solving. As designers and developers of AI systems, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
 
 </PageDescription>
 
 ## Introduction
 
-#### This guide provides discussion points concerning:
+#### Everyday Ethics for AI provides discussion points concerning:
  - specific virtues that AI systems should possess;
- - guidance for designers and developers building and training AI.
+ - guidance for designers and developers training and building AI.
 
 Artificial intelligence is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
 AI systems must remain flexible enough to undergo constant maintenance and improvement as ethical challenges are discovered and remediated. By adopting and practicing the five focal areas covered here, designers and developers can become more ethically aware, mitigate biases within these systems, and instill responsibility and accountability in those who work with AI. Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns.
 
 #### Five Ethical Focal Areas
- 1. [Accountability](/accountability)
- 2. [Value Alignment](/value-alignment)
- 3. [Explainability](/explainability)
- 4. [Fairness](/fairness)
- 5. [User Data Rights](/user-data-rights)
+ 1. [Accountability](/ethics/accountability)
+ 2. [Value Alignment](/ethics/value-alignment)
+ 3. [Explainability](/ethics/explainability)
+ 4. [Fairness](/ethics/fairness)
+ 5. [User Data Rights](/ethics/user-data-rights)
 
 These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
 
