page description and assets and whole team design tweaks

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -7,23 +7,18 @@ import './ethics.scss';
 
 
 <Row className="opener">
-<Column className={'show-on-small'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
-
-![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
-
-</Column>
 
 <Column colSm={4} colMd={7} colLg={7}>
 
 ### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
 
-### Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
+Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
 
-### *Every person involved* in the creation of AI at any step *is accountable for considering the system’s impact in the world*, as are the companies invested in its development.
+*Every person involved* in the creation of AI at any step *is accountable for considering the system’s impact in the world*, as are the companies invested in its development.
 
 </Column>
 
-<Column className={'hide-on-small'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
+<Column className={'hide-on-large'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
 
 ![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
