--- a/src/pages/ethics/everyday-ethics.mdx
+++ b/src/pages/ethics/everyday-ethics.mdx
@@ -2,7 +2,6 @@
 title: "Everyday Ethics for AI"
 ---
 
-import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <PageDescription>
@@ -14,12 +13,28 @@ import './ethics.scss';
 ## Introduction
 
 #### Everyday Ethics for AI provides discussion points concerning:
- - specific virtues that AI systems should possess;
- - guidance for designers and developers training and building AI.
+- specific virtues that AI systems should possess;
+- guidance for designers and developers training and building AI.
+
+<Row>
+<Column colLg={8}>
 
 Artificial intelligence is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
 AI systems must remain flexible enough to undergo constant maintenance and improvement as ethical challenges are discovered and remediated. By adopting and practicing the five focal areas covered here, designers and developers can become more ethically aware, mitigate biases within these systems, and instill responsibility and accountability in those who work with AI. Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns.
+</Column>
+
+<Column colLg={3} offsetLg={1} noGutterSm>
+<Aside>
+
+**Stay up to date**
+
+We're always updating our ethics guide to reflect our feedback from users and teams. Find the most [current version here](ibm.biz/everydayethics)
+
+
+</Aside>
+</Column>
+</Row>
 
 #### Five Ethical Focal Areas
  1. [Accountability](/ethics/accountability)
