--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -10,11 +10,11 @@ import './ethics.scss';
 
 ### AI should be designed for humans to easily perceive, detect, and understand its decision process.
 
-### In general, we don't blindly trust those who can't explain their reasoning. The same goes for AI, perhaps <a href="https://www.ibm.com/watson/advantage-reports/future-of-artificial-intelligence/building-trust-in-ai.html"> even more so</a>. As an AI increases in capabilities and achieves a greater range of impact, its decision-making process should be explainable in terms people can understand. Explainability is key for users interacting with AI to understand the AI's conclusions and recommendations. Your users should always be aware that they are interacting with an AI. Good design does not sacrifice transparency in creating a seamless experience. **Imperceptible AI is not ethical AI.**
+In general, we don't blindly trust those who can't explain their reasoning. The same goes for AI, perhaps <a href="https://www.ibm.com/watson/advantage-reports/future-of-artificial-intelligence/building-trust-in-ai.html"> even more so</a>. As an AI increases in capabilities and achieves a greater range of impact, its decision-making process should be explainable in terms people can understand. Explainability is key for users interacting with AI to understand the AI's conclusions and recommendations. Your users should always be aware that they are interacting with an AI. Good design does not sacrifice transparency in creating a seamless experience. **Imperceptible AI is not ethical AI.**
 
 </Column>
 
-<Column colSm={2} offsetSm={0} colMd={2} colLg={3} offsetLg={1}>
+<Column className={'hide-on-large'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
 
 ![Explainability pictogram](../../images/ethics/explainability/Image_1.png)
 
