--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -10,11 +10,11 @@ import './ethics.scss';
 
 ### AI must be designed to minimize bias and promote inclusive representation.
 
-### AI provides deeper insight into our personal lives when interacting with our sensitive data. As humans are inherently vulnerable to biases, and are responsible for building AI, there are chances for human bias to be embedded in the systems we create. It is the role of a responsible team to minimize algorithmic bias through ongoing research and data collection which is representative of a diverse population.
+AI provides deeper insight into our personal lives when interacting with our sensitive data. As humans are inherently vulnerable to biases, and are responsible for building AI, there are chances for human bias to be embedded in the systems we create. It is the role of a responsible team to minimize algorithmic bias through ongoing research and data collection which is representative of a diverse population.
 
 </Column>
 
-<Column colSm={2} offsetSm={0} colMd={2} colLg={3} offsetLg={1}>
+<Column className={'hide-on-large'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
 
 ![Fairness pictogram](../../images/ethics/fairness/Image_1.png)
 
