--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -2,7 +2,6 @@
 title: "User Data Rights"
 ---
 
-import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
@@ -10,13 +9,11 @@ import './ethics.scss';
 
 ### AI must be designed to protect user data and preserve the user’s power over access and uses.
 
-### It is your team's responsibility to keep users empowered with control over their interactions.
-
-### [Pew Research](www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/) recently found that being in control of our own information is “very important” to 74% of Americans. [The European Commission](https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and-challenge-new-technologies-are) found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s [General Data Protection Regulation](https://www.eugdpr.org/) and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
+It is your team's responsibility to keep users empowered with control over their interactions. [Pew Research](www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/) recently found that being in control of our own information is “very important” to 74% of Americans. [The European Commission](https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and-challenge-new-technologies-are) found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s [General Data Protection Regulation](https://www.eugdpr.org/) and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
 
 </Column>
 
-<Column colSm={2} offsetSm={0} colMd={2} colLg={3} offsetLg={1}>
+<Column className={'hide-on-large'} colSm={2} offsetSm={1} colMd={2} colLg={3} offsetLg={1}>
 
 ![User data rights pictogram](../../images/ethics/user-data-rights/Image_1.png)
 
