--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -3,8 +3,6 @@ title: Fundamentals
 hidden: false
 ---
 
-import { AnchorLink, AnchorLinks, Caption, Column, PageDescription, Row } from "gatsby-theme-carbon";
-
 <PageDescription>
 
   Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, *voilá*, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
@@ -117,7 +115,7 @@ AI isn’t about data, it’s about insights. Data is the fuel for the car, insi
 AI is capable of delivering more human-like interactions with people — based on the mode, form, and quality each person prefers. It reasons through the sum total of structured and unstructured data to find what really matters but this isn’t the full picture. **Our solutions must primarily address user needs instead of being force-fit to accommodate technical capabilities or requirements.**
 
 <Row>
-<Column colLg={9}>
+<Column colLg={12}>
 
 ![The Relationship Age](../../images/fundamentals/Image_1.png)
 
@@ -194,14 +192,15 @@ Both parties are fully partnered through trust and mutual appreciation. The rela
 
 
 <Row>
-<Column colLg={9}>
+<Column colLg={12}>
 
-![The Relationship Age](../../images/fundamentals/Image_3.png)
+![The Relationship Age](../../images/fundamentals/Image_3.svg)
 
 </Column>
 </Row>
 
-So what do we need to consider when one person in a relationship is replaced by a machine? By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of movies or books. This is something for us all to aspire to. **AI is a symbiotic relationship.**
+### A symbiotic relationship
+So what do we need to consider when one person in a relationship is replaced by a machine? By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of movies or books. This is something for us all to aspire to.
 
 <Row>
 <Column colLg={6}>
