--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -61,7 +61,7 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 
 <div class='hide-on-small'>
 
-![AI](../../images/basics/ai/Image_1.png)
+![AI](../../images/basics/ai/Image_1.svg)
 
 </div>
 
