--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,7 +18,7 @@ export default HomepageTemplate;
       iconColor="dark"
       >
 
-![](../images/Fundamentals.png)
+![](../images/Fundamentals.svg)
 
   </ImageCard>
   <ImageCard
@@ -31,7 +31,7 @@ export default HomepageTemplate;
     actionIcon="arrowRight"
     >
 
-![](../images/Basics.png)
+![](../images/Basics.svg)
 
   </ImageCard>
 </Column>
@@ -46,7 +46,7 @@ export default HomepageTemplate;
       actionIcon="arrowRight"
       >
 
-![](../images/Ethics.png)
+![](../images/Ethics.svg)
 
 
   </ImageCard>
@@ -60,7 +60,7 @@ export default HomepageTemplate;
         hoverColor="dark"
       >
 
-![](../images/Conversation.png)
+![](../images/Conversation.svg)
 
   </ImageCard>
 </Column>
@@ -75,7 +75,7 @@ export default HomepageTemplate;
       hoverColor="dark"
       >
 
-![](../images/Team-Essentials.png)
+![](../images/Team-Essentials.svg)
 
   </ImageCard>
 </Column>
