--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -29,7 +29,7 @@ Generally, in statistics and machine learning (ML), we want to know as much as p
 
 In an ideal world, we’d survey each and every individual in that population, or the majority of them. In the real world, that’s expensive, tedious, and sometimes impossible. Instead, data collectors try to select a sliver of the population that best represents the population as a whole. It could look something like this.
 
-![Sampling](../../images/basics/data/Image_1.png)
+![Sampling](../../images/basics/data/Image_1.svg)
 
 Assuming you could only pick four people, that’s probably the closest you could get to representing the population. Naturally, as the sample size grows closer to the population size, your sample characteristics will be closer to the true characteristics of the whole.
 
