--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -31,7 +31,7 @@ AIs are taught, not explicitly programmed. In other words, instead of spelling o
 <Row>
 <Column colSm={4} colMd={8} colLg={12}>
 
-![ML uses examples not rules](../../images/basics/ml/Image_5.png)
+![ML uses examples not rules](../../images/basics/ml/Image_5.svg)
 
 </Column>
 </Row>
@@ -50,7 +50,7 @@ To demonstrate the former, let's take the example of teaching a child their shap
 <Row>
 <Column colLg={6}>
 
-![Shapes](../../images/basics/ml/Image_1.png)
+![Shapes](../../images/basics/ml/Image_1.svg)
 
 </Column>
 </Row>
@@ -62,7 +62,7 @@ Triangles are a little more complex. Based on the shapes sheet, your child might
 <Row>
 <Column colLg={6}>
 
-![Triangles](../../images/basics/ml/Image_2.png)
+![Triangles](../../images/basics/ml/Image_2.svg)
 
 </Column>
 </Row>
@@ -81,7 +81,7 @@ Let’s use the example again of the child and the shapes. Suppose again that yo
 <Row>
 <Column colLg={12}>
 
-![Different shapes clustered together by similar properties](../../images/basics/ml/Image_3.png)
+![Different shapes clustered together by similar properties](../../images/basics/ml/Image_3.svg)
 
 </Column>
 </Row>
@@ -108,7 +108,7 @@ For now, just know that deep learning is machine learning that uses a neural net
 <Row>
 <Column colLg={6}>
 
-![Deep learning is a subset of machine learning is a subset of AI](../../images/basics/ml/Image_4.png)
+![Deep learning is a subset of machine learning is a subset of AI](../../images/basics/ml/Image_4.svg)
 
 </Column>
 </Row>
