--- a/src/pages/team-essentials/index.mdx
+++ b/src/pages/team-essentials/index.mdx
@@ -20,6 +20,27 @@ Teams need a diverse set of minds and skill sets to create something useful, int
 </Column>
 </Row>
 
+## Apply design thinking to artificial intelligence.
+
+Teams need a diverse set of minds and skill sets to create something useful, intuitive, and responsible. Our course will give you the language, knowledge, and actionable methods to work alongside technical and non-technical members of your team to create AI solutions.
+
+In this course, you’ll learn our AI Essentials Framework, work through a fictional case study to see how a team could use this framework, and collect resources that you can apply with your team immediately.
+
+You'll explore what it means to design artificial intelligence systems as a team, guided by a clear intent and a focus on people. This course will give you the framework and tools you need to recognize responsible AI design, align your team, and work with data sources to start building an AI solution today.
+
+## AI Essentials Framework
+
+The framework is a set of activities, tools, and principles that enable teams to design thoughtful, human-centered artificial intelligence solutions using Enterprise Design Thinking.
+
+The AI Essentials Framework is a specific grouping of activities to work through to align your team on strategy for an AI experience. There are five focal areas in the framework:
+
+ - **Intent**: Align on the business and user intent(s) for your solution.
+ - **Data**: Document the data you could use to make your idea a reality.
+ - **Understanding**: Determine what you will need to teach your AI.
+ - **Reasoning**: Bring your ideas down to earth.
+ - **Knowledge**: Brainstorm the direct and indirect effects of your AI.
+
+
 <Row className={'video-wrapper'}>
 <Column colSm={12} colMd={12} colLg={12}>
 
