images and captions

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -2,8 +2,6 @@
 title: "Artificial Intelligence"
 ---
 
-import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
-
 <PageDescription>
 
   These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean.
@@ -61,7 +59,16 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 
 <div class='hide-on-small'>
 
-![AI](../../images/basics/ai/Image_1.svg)
+<Row>
+<Column colLg={12}>
+
+![AI](../../images/basics/ai/Image_1.png)
+
+<Caption fullWidth>
+  Needs a caption
+</Caption>
+</Column>
+</Row>
 
 </div>
 
@@ -69,6 +76,9 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 
 ![AI](../../images/basics/ai/Image_1_mobile.png)
 
+<Caption fullWidth>
+  Needs a caption
+</Caption>
 </div>
 
 #### Examples based
