--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -2,8 +2,6 @@
 title: "Data"
 ---
 
-import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
-
 <PageDescription>
 
   These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean.
@@ -29,7 +27,16 @@ Generally, in statistics and machine learning (ML), we want to know as much as p
 
 In an ideal world, we’d survey each and every individual in that population, or the majority of them. In the real world, that’s expensive, tedious, and sometimes impossible. Instead, data collectors try to select a sliver of the population that best represents the population as a whole. It could look something like this.
 
-![Sampling](../../images/basics/data/Image_1.svg)
+<Row>
+<Column colLg={12}>
+
+![Sampling](../../images/basics/data/Image_1.png)
+
+<Caption fullWidth>
+  Needs a caption
+</Caption>
+</Column>
+</Row>
 
 Assuming you could only pick four people, that’s probably the closest you could get to representing the population. Naturally, as the sample size grows closer to the population size, your sample characteristics will be closer to the true characteristics of the whole.
 
