--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -5,7 +5,7 @@ hidden: false
 
 <PageDescription>
 
-  Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, *voilá*, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
+Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, *voilá*, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
 
 </PageDescription>
 
@@ -23,8 +23,6 @@ hidden: false
 
 ## Introduction
 
-Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, *voilá*, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
-
 When looking for ways to apply this cutting-edge, revolutionary technology, AI can not only dazzle, but can blind us as well. The more buzz and hype, the greater the pressure becomes to rush to create something using whatever new capabilities are presented to us. The benefit of moments like this is the opportunity to discover, experiment, and learn.
 
 We must focus our design talents upon a new type relationship with machines - machines that can draw from vast stores of human knowledge, hold a conversation, and increase human understanding. What should these relationships look like? Designing for AI requires new considerations and new ways of thinking.
@@ -39,7 +37,7 @@ As a result, this changes the nature of our design considerations, some of which
 
 ## AI Design Foundations
 
-As Jared Spool says, **design is the rendering of intent.** This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
+As [Jared Spool] (https://twitter.com/jmspool/status/967730832482938880?lang=en) says, **design is the rendering of intent.** This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
 
 Design is more than a job or role—it’s an essential part of what makes us human. **The value of design is to improve lives and leave the world better than we found it.** When designing for AI, our core intents are always rendered through the following lenses:
 
