--- a/src/pages/ethics/everyday-ethics.mdx
+++ b/src/pages/ethics/everyday-ethics.mdx
@@ -29,7 +29,7 @@ AI systems must remain flexible enough to undergo constant maintenance and impro
 
 **Stay up to date**
 
-We're always updating our ethics guide to reflect our feedback from users and teams. Find the most [current version here](ibm.biz/everydayethics)
+We're always updating our ethics guide to reflect our feedback from users and teams. Find the most [current version here](ibm.biz/everydayethics).
 
 
 </Aside>
@@ -45,16 +45,16 @@ We're always updating our ethics guide to reflect our feedback from users and te
 
 These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
 
-The large-scale focus on AI ethics by groups like the IEEE Global Initiative on Ethics of Autonomous and Intelligent Systems, which will be referenced throughout this document, should be mirrored in businesses and working groups of all sizes. The criteria and metrics for ethical AI systems will ultimately depend on the industry and use case they operate within.
+The large-scale focus on AI ethics by groups like the IEEE Global Initiative on Ethics of Autonomous and Intelligent Systems, which will be referenced throughout this guide, should be mirrored in businesses and working groups of all sizes. The criteria and metrics for ethical AI systems will ultimately depend on the industry and use case they operate within.
 
-We hope this document serves as a centralized source that helps teams establish best practices. Designers and developers should never work in a vacuum and must stay in tune with users’ needs and concerns.
+We hope this guide serves as a centralized source that helps teams establish best practices. Designers and developers should never work in a vacuum and must stay in tune with users’ needs and concerns.
 
 Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns. This guide provides teams with a starting point and will surely evolve as AI capabilities continue to grow.
 
 The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
 
 ## Running example
-A hotel chain wants to embed artificial intelligence into an in-room virtual assistant/concierge to augment and personalize their users’ stay. We’ll use the project team in charge of this effort as an example throughout the document. This conversational agent will include capabilities such as:
+A hotel chain wants to embed artificial intelligence into an in-room virtual assistant/concierge to augment and personalize their users’ stay. We’ll use the project team in charge of this effort as an example throughout the guide. This conversational agent will include capabilities such as:
 
  - Agentive-style assistance.
  - Introduction to their room and services in their preferred language.
